--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation "com.android.volley:volley:1.2.1"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
