--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CarReportAppV2"
         android:usesCleartextTraffic="true">
+        <meta-data
+            android:name="com.google.mlkit.vision.DEPENDENCIES"
+            android:value="ocr"
+            />
         <activity android:name=".UpdateProfileUser"></activity>
         <activity android:name=".ReportDescriptiveView" />
         <activity android:name=".ViewReports" />
